[package]
name = "kcursor"
version = "0.1.0"
edition = "2021"
readme = "readme.md"
repository = "https://github.com/m4rch3n1ng/kcursor"

[dependencies]
cursor-icon = "1.2.0"
resvg = { version = "0.44.0", default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
xcursor = "0.3.8"

[dev-dependencies]
png = "0.17.14"

[features]
default = []
text = ["resvg/text", "resvg/system-fonts", "resvg/memmap-fonts"]
